--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.501.0",
     "mongoose": "^8.13.2",
     "next": "15.0.3",
     "react": "^18.3.1",
